<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.credits.CreditsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:contentDescription="@string/desc_logo">
        </ImageView>

        <TextView
            android:id="@+id/app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nav_header_title"
            android:textStyle="bold">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/authors"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/manuel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manuel1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/manuel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manuel2"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/manuel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manuel3">
        </TextView>
        <TextView
            android:id="@+id/manuel4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manuel4">
        </TextView>
        <TextView
            android:id="@+id/manuel5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manuel5">
        </TextView>
        <TextView
            android:id="@+id/manuel6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manuel6">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/mariajose1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mariajose1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/mariajose2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mariajose2"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/mariajose3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mariajose3">
        </TextView>
        <TextView
            android:id="@+id/mariajose4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mariajose4">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/pictures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/pictures"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/fotos1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fotos1"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/fotos2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fotos2">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/translations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/translations"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/arabian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/arabian"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/hamid1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hamid1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/hamid2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hamid2"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/hamid3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hamid3"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/russian"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/zhenia1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zhenia1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/zhenia2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zhenia2"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/zhenia3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zhenia3"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/zhenia4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zhenia4"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/max1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/max2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max2"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/max3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max3"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/max4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max4"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/catalan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/catalan"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/mercedes1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mercedes1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/mercedes2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mercedes2"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/raquel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raquel1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/raquel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raquel2"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/miquel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miquel1"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/miquel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miquel2"
            android:gravity="center">
        </TextView>
    </LinearLayout>
</ScrollView>
